--- a/lesson_3.ipynb
+++ b/lesson_3.ipynb
@@ -50,7 +50,7 @@
     "Затем size появляется в хранилище класса. Далее мы изменяем атрибут size с помощь команды Apple.size = 10\n",
     "Когда мы вызываем Apple.size = 6 программма проверяет, существует ли атрибут size в хранилище класса,\n",
     "если нет, создает его. Когда мы вызываем Apple.size = 10 программма проверяет, существует ли атрибут\n",
-    "size, если да то заменяем значение на 10."
+    "size, если да то заменяем значение на 10!"
    ]
   },
   {
