--- a/lesson_5.ipynb
+++ b/lesson_5.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "Функцию getattr удобно использовать, когда неизвестно, есть ли такой атрибут или нет. ПОтому что у getattr есть третий аргумент\n",
     "default который возвращает если атрибута нет\n",
-    "Функцию getattr часто используют в циклах, потому-что прямое обращение к атрибуту в цикле не всегда работает"
+    "Функцию getattr часто используют в циклах, потому-что прямое обращение к атрибуту в цикле не всегда работает!"
    ]
   }
  ],
